--- a/mario/mario.html
+++ b/mario/mario.html
@@ -14,56 +14,14 @@
     <title>Mario</title>
 </head>
 <body>
+    <!-- <div class="pixel-test"></div> -->
+    <!-- <div class="wall wall0"></div> -->
     <div class="all">
         <div class="landscape">
-            <div class="wall wall0">
-                <div class="w50"></div>
-                <div class="w50"></div>
-                <div class="w20"></div>
-                <div class="w60"></div>
-                <div class="w20"></div>
-                <div class="w50"></div>
-                <div class="w50"></div>
-                <div class="w30"></div>
-                <div class="w50"></div>
-                <div class="w20"></div>
-            </div>
-        <div class="wall wall1">
-            <div class="w50"></div>
-            <div class="w50"></div>
-            <div class="w20"></div>
-            <div class="w60"></div>
-            <div class="w20"></div>
-            <div class="w50"></div>
-            <div class="w50"></div>
-            <div class="w30"></div>
-            <div class="w50"></div>
-            <div class="w20"></div>
-        </div>
-        <div class="wall wall2">
-            <div class="w50"></div>
-            <div class="w50"></div>
-            <div class="w20"></div>
-            <div class="w60"></div>
-            <div class="w20"></div>
-            <div class="w50"></div>
-            <div class="w50"></div>
-            <div class="w30"></div>
-            <div class="w50"></div>
-            <div class="w20"></div>
-        </div>
-        <div class="wall wall3">
-            <div class="w50"></div>
-            <div class="w50"></div>
-            <div class="w20"></div>
-            <div class="w60"></div>
-            <div class="w20"></div>
-            <div class="w50"></div>
-            <div class="w50"></div>
-            <div class="w30"></div>
-            <div class="w50"></div>
-            <div class="w20"></div>
-        </div>
+            <div class="wall wall0"></div>
+        <div class="wall wall1"></div>
+        <div class="wall wall2"></div>
+        <div class="wall wall3"></div>
         <div class="giftwall">
             <div class="column-points">
                 <div class="point"></div>
@@ -759,6 +717,5 @@
         </div>
 
     </div>
-        
 </body>
 </html>
