[ADD] first animation

--- a/mario/index.html
+++ b/mario/index.html
@@ -32,11 +32,15 @@
     <link rel="stylesheet" href="./css/turtle.css">
     <link rel="stylesheet" href="./css/emptywall.css">
     <link rel="stylesheet" href="./css/flag.css">
+    <link rel="stylesheet" href="./css/mario.css">
+    <link rel="stylesheet" href="./css/animations.css">
 
 </head>
 <body>
         <main>
             <section>
+                <div class="mario"></div>
+
                 <div class="bigmountain bgmnt1"></div>
                 <div class="bigmountain bgmnt2"></div>
                 <div class="bigmountain bgmnt3"></div>
