--- a/mario/index.html
+++ b/mario/index.html
@@ -33,10 +33,19 @@
     <link rel="stylesheet" href="./css/emptywall.css">
     <link rel="stylesheet" href="./css/flag.css">
     <link rel="stylesheet" href="./css/mario.css">
-    <link rel="stylesheet" href="./css/animations.css">
+    <link rel="stylesheet" href="./css/controls.css">
+    <!-- <link rel="stylesheet" href="./css/animations.css"> -->
 
 </head>
+
 <body>
+   
+    <input type="checkbox" accesskey="q" id="left">
+    <input type="checkbox" accesskey="d" id="right">
+    <input type="checkbox" accesskey="z" id="up">
+    <input type="checkbox" accesskey="s" id="down">
+
+    <article class="body">
         <main>
             <section>
                 <div class="mario"></div>
@@ -359,5 +368,27 @@
                 </div>
             </section>
         </main>
+    </article>
+    <script>
+        document.querySelector('#left').addEventListener('focus',()=>{
+            console.log("focus left")
+            console.log(document.querySelector('main').getAnimations()[0].effect.getComputedTiming().progress)
+            let x = document.querySelector('main').getBoundingClientRect().x
+            let duration = Math.floor(-x*60/3000)
+            console.log('x '+ x)
+            console.log('duration '+ duration)
+            let progress = 100 - (duration*100/60)/100
+            document.querySelector('main').getAnimations()[0].effect.getComputedTiming().progress = progress
+            console.log(progress)
+            console.log(document.querySelector('main').getAnimations()[0].effect.getComputedTiming().progress)
+            // let animation =[ [{
+            // transform: `translateX(${x}px)`},
+            // {transform: 'translateX(0)'}], {duration:duration+'s'}]
+            // console.log(animation)
+            // document.querySelector('main').animate([{
+            // transform: `translateX(${x}px)`},
+            // {transform: 'translateX(0)'}], {duration:duration*1000})
+        })
+    </script>
 </body>
 </html>
