[ADD] control mario yeah

--- a/mario/index.html
+++ b/mario/index.html
@@ -39,16 +39,15 @@
 </head>
 
 <body>
-   
-    <input type="checkbox" accesskey="q" id="left">
-    <input type="checkbox" accesskey="d" id="right">
-    <input type="checkbox" accesskey="z" id="up">
-    <input type="checkbox" accesskey="s" id="down">
-
+    <aside class="blah">Survole la zone verte avec la souris pour sauter</aside>
+    
     <article class="body">
-        <main>
+        <main tabindex="1" accesskey="z" >
+            <div class="mario"></div>
+            <div class="nifaitniafaire"></div>
+            <input type="checkbox" id="start">
+            <label for="start">Use <- and -> to move <br> <span class="btn">Start</span></label>
             <section>
-                <div class="mario"></div>
 
                 <div class="bigmountain bgmnt1"></div>
                 <div class="bigmountain bgmnt2"></div>
