--- a/mario/index.html
+++ b/mario/index.html
@@ -32,8 +32,7 @@
     <link rel="stylesheet" href="./css/emptywall.css">
     <link rel="stylesheet" href="./css/flag.css">
     <link rel="stylesheet" href="./css/mario.css">
-    <link rel="stylesheet" href="./css/controls.css">
-    <!-- <link rel="stylesheet" href="./css/animations.css"> -->
+    <link rel="stylesheet" href="./css/animations.css">
 
 </head>
 
