[UPD] modification placements

--- a/mario/index.html
+++ b/mario/index.html
@@ -41,7 +41,7 @@
     <article class="body">
         <main tabindex="1" accesskey="z" >
             <input type="checkbox" id="start">
-            <label for="start">Use <- and -> to move the camera <br> <span class="btn">Start</span></label>
+            <label for="start"> < Une Dev, Des Div > <br> <span class="btn">Start</span></label>
             <section>
 
                 <div class="bigmountain bgmnt1"></div>
